...
            "value": "Fertig"
          }
        },
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Done"
          }
        },
        "es": {
          "stringUnit": {
            "state": "translated",
            "value": "Listo"
...
            "value": "Schließen"
          }
        },
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Close"
          }
        },
        "es": {
          "stringUnit": {
            "state": "translated",
            "value": "Cerrar"
...
            "value": "Zurück zur letzten Seite"
          }
        },
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Back to the last page"
          }
        },
        "es": {
          "stringUnit": {
            "state": "translated",
            "value": "Volver a la última página"
...
            "value": "Menü"
          }
        },
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Menu"
          }
        },
        "es": {
          "stringUnit": {
            "state": "translated",
            "value": "Menú"
...
            "value": "Gelb"
          }
        },
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Yellow"
          }
        },
        "es": {
          "stringUnit": {
            "state": "translated",
            "value": "Amarillo"
...
